--- a/MoveablePostit.html
+++ b/MoveablePostit.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="postit.css">
+<link rel="stylesheet" type="text/css" href="src/postit.css">
 </head>
 <body>
 <button onclick="createNote()">New note</button>
 
-<script type="text/javascript" src="postit.js"></script>
+<script type="text/javascript" src="src/postit.js"></script>
 
 
 </body>
