--- a/MoveablePostit.html
+++ b/MoveablePostit.html
@@ -6,6 +6,7 @@
 <body>
 <button onclick="createNote()">New note</button>
 
+<script type="text/javascript" src="src/lodash.js"></script>
 <script type="text/javascript" src="src/postit.js"></script>
 
 
