draw note based on note object

--- a/MoveablePostit.html
+++ b/MoveablePostit.html
@@ -4,9 +4,10 @@
 <link rel="stylesheet" type="text/css" href="src/postit.css">
 </head>
 <body>
-<button onclick="createNote()">New note</button>
+<!-- <button onclick="createNote()">New note</button> -->
+<button onclick="generateNote()">New note</button>
 
-<script type="text/javascript" src="src/lodash.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.0/lodash.js"></script>
 <script type="text/javascript" src="src/postit.js"></script>
 
 
